# poseidon

./: .gitignore  CHANGELOG.md  KnownDeauthBugFixSoon.md  README.md  TESTERS.md  _capture.ps1  platformio.ini  platformio.ini.stable
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: attribution.md  bug_report.md  feature_request.md
c5_node/: CMakeLists.txt  README.md  _mon17.ps1  sdkconfig.defaults
c5_node/main/: CMakeLists.txt  hs_capture.c  led_fx.c  led_fx.h  main.c  pmkid_capture.c  proto.c  proto.h  wifi_attacker.c  wifi_scanner.c  zb_sniffer.c
docs/: arsenal.html  credits.html  deauth-injection-patch.md  hardware.html  index.html  install.html  m5burner.json  manifest-trident.json  review-action-items.md  roadmap.html  testers.html  v0.4-platform-migration.md
scripts/: c5_tail.py  deauth_loop.sh  find_esp.ps1  find_live_usb.ps1  list_ports.ps1  prepare_release.sh  serial_grab.ps1  wsl_build.sh  wsl_pio_build.sh  wsl_pio_install.sh  wsl_sync_and_build.sh
src/: app.h  ble_db.cpp  ble_db.h  ble_types.h  c5_cmd.cpp  c5_cmd.h  cc1101_hw.cpp  cc1101_hw.h  cc1101_rmt.cpp  cc1101_rmt.h  deauth_autotest.cpp  dhcp_cache.cpp  dhcp_cache.h  gps.cpp  gps.h  input.cpp  input.h  lora_hw.cpp  lora_hw.h  main.cpp  menu.cpp  menu.h  mesh.cpp  mesh.h  net_helpers.cpp  net_helpers.h  nrf24_hw.cpp  nrf24_hw.h  nrf24_types.h  radio.cpp  radio.h  sd_helper.cpp  sd_helper.h  sfx.cpp  sfx.h  splash.cpp  subghz_decode.cpp  subghz_decode.h  subghz_types.h  theme.cpp  (+6 more)
support_files/: launcher_8Mb.csv
tools/: img_to_rgb565.py  png_to_rgb565.py  sprite_sheet_to_icons.py
(+88 files in other folders)
